Fix application entry issue.